--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,12 +2,22 @@
   "extends": "expo/tsconfig.base",
   "compilerOptions": {
     "strict": true,
+    "baseUrl": ".",
     "paths": {
       "@/*": [
         "./*"
       ],
-      "@/app/*": [
-        "./app/*"
+      "@app/*": [
+        "app/*"
+      ],
+      "@components/*": [
+        "app/components/*"
+      ],
+      "@config/*": [
+        "app/config/*"
+      ],
+      "@services/*": [
+        "app/services/*"
       ]
     }
   },
