--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
+    "jsonwebtoken": "^9.0.2",
     "moti": "^0.29.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
