--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-av": "^15.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
+    "expo-document-picker": "^13.0.1",
     "expo-file-system": "^18.0.4",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
@@ -48,6 +49,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-document-picker": "^9.3.1",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
