--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.8.2",
@@ -74,6 +75,7 @@
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
+    "@types/react-native-snap-carousel": "^3.8.11",
     "@types/react-test-renderer": "^18.3.0",
     "babel-loader": "^9.2.1",
     "jest": "^29.2.1",
