--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
+    "react-native-calendars": "^1.1307.0",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-circular-progress": "^1.4.1",
     "react-native-document-picker": "^9.3.1",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.20.2",
