--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
+    "@lottiefiles/dotlottie-react": "^0.6.5",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-community/cli": "^16.0.0",
@@ -44,6 +45,7 @@
     "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
     "jsonwebtoken": "^9.0.2",
+    "lottie-react-native": "^7.1.0",
     "moti": "^0.29.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
