--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.4.1",
     "react-native-document-picker": "^9.3.1",
+    "react-native-element-dropdown": "^2.12.2",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
