--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "expo-symbols": "~0.2.0",
     "expo-system-ui": "~4.0.4",
     "expo-web-browser": "~14.0.1",
+    "framer-motion": "^11.15.0",
     "jsonwebtoken": "^9.0.2",
     "lottie-react-native": "^7.1.0",
     "moti": "^0.29.0",
+    "next": "^15.1.3",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
@@ -73,7 +75,8 @@
     "socket.io-client": "^4.8.1",
     "victory-native": "^41.12.1",
     "victory-pie": "^37.3.2",
-    "xlsx": "^0.18.5"
+    "xlsx": "^0.18.5",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
