--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@react-navigation/native": "^7.0.0",
     "axios": "^1.7.9",
     "babel-plugin-module-resolver": "^5.0.2",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.11",
     "expo-av": "^15.0.1",
     "expo-blur": "~14.0.1",
