--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "expo-web-browser": "~14.0.1",
     "framer-motion": "^11.15.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lottie-react-native": "^7.1.0",
     "moti": "^0.29.0",
     "next": "^15.1.3",
