--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "expo-av": "^15.0.1",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.3",
-    "expo-document-picker": "^13.0.1",
+    "expo-document-picker": "~13.0.2",
     "expo-file-system": "^18.0.4",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
@@ -57,7 +57,6 @@
     "react-native-calendars": "^1.1307.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-circular-progress": "^1.4.1",
-    "react-native-document-picker": "^9.3.1",
     "react-native-element-dropdown": "^2.12.2",
     "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.20.2",
