--- a/package.json
+++ b/package.json
@@ -9,22 +9,29 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "clean": "if exist node_modules\\.cache\\babel-loader rmdir /s /q node_modules\\.cache\\babel-loader",
+    "clean:all": "if exist node_modules rmdir /s /q node_modules && npm install",
+    "start:clean": "npm run clean && npm start -- --clear"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/config-plugins": "^9.0.14",
     "@expo/vector-icons": "^14.0.4",
     "@lottiefiles/dotlottie-react": "^0.6.5",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-native-community/blur": "^4.4.1",
     "@react-native-community/cli": "^16.0.0",
     "@react-native-community/datetimepicker": "^8.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
     "@react-native-picker/picker": "2.9.0",
     "axios": "^1.7.9",
+    "axios-rate-limit": "^1.4.0",
     "babel-plugin-module-resolver": "^5.0.2",
-    "date-fns": "^4.1.0",
+    "date-fns": "^2.30.0",
+    "dompurify": "^3.0.8",
     "expo": "~52.0.11",
     "expo-av": "^15.0.1",
     "expo-blur": "~14.0.1",
@@ -46,6 +53,7 @@
     "framer-motion": "^11.15.0",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
+    "lodash": "^4.17.21",
     "lottie-react-native": "^7.1.0",
     "moti": "^0.29.0",
     "next": "^15.1.3",
@@ -60,14 +68,14 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-modal-datetime-picker": "^18.0.0",
-    "react-native-paper": "^5.12.5",
+    "react-native-paper": "^5.12.1",
     "react-native-portal": "^1.3.0",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-reanimated": "^3.6.1",
+    "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~4.1.0",
     "react-native-snap-carousel": "^3.9.1",
     "react-native-svg": "15.8.0",
-    "react-native-vector-icons": "^10.2.0",
+    "react-native-vector-icons": "^10.0.3",
     "react-native-video": "^6.8.2",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.2",
@@ -75,20 +83,24 @@
     "victory-native": "^41.12.1",
     "victory-pie": "^37.3.2",
     "xlsx": "^0.18.5",
-    "zustand": "^5.0.2"
+    "zod": "^3.22.4",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0",
     "@babel/preset-env": "^7.26.0",
+    "@types/dompurify": "^3.0.5",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
     "@types/react-native": "^0.72.8",
     "@types/react-native-snap-carousel": "^3.8.11",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.3.0",
     "babel-loader": "^9.2.1",
     "jest": "^29.2.1",
     "jest-expo": "~52.0.2",
     "nodemon-webpack-plugin": "^4.8.2",
+    "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
     "source-map-support": "^0.5.21",
     "typescript": "^5.3.3",
